style: fixing profile picture error getting blurred

--- a/challenges/article-preview-component-master/assets/css/style.css
+++ b/challenges/article-preview-component-master/assets/css/style.css
@@ -143,12 +143,20 @@ body{
     display: flex;
     gap: 16px;
 }
-
-.card__user-image img{
-    width: 42px;
-    height: 42px;
-    border-radius: 50%;
+.card__user-image{
+    display: flex;
+    overflow: hidden;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%; 
 }
+.card__user-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
 
 .card__user-info{
     display: flex;
